test/sematest/valid/test1.valid.java
/* -*- coding:utf-8; mode:java; -*- */

class X {

	public X X;

	public static void main(String[] args) { }

	public X X(X X) {
		if (X == null) {
			return new X();
		}
		return X(X(X(X)));
	}
}
