test/sematest/invalid/return_void_array.java
class A {
    public static void main(String[] args) {}
    public void[] foo() { return null; }
}
